--- a/recoverable-data-structures.tex
+++ b/recoverable-data-structures.tex
@@ -63,7 +63,9 @@
 
 \begin{document}
 
-%	\input{linked-list}
+	\input{linked-list}
+	\clearpage
+	
 	\input{elimination-stack}
 %	\input{BST-robust}
 	
