--- a/linked-list.tex
+++ b/linked-list.tex
@@ -23,18 +23,17 @@
 
 \section{Linked-List}
 
-Harris Linked-List uses an Atomic-Markable-Reference object, in which the next field of a Node, in addition to a reference to the next node in the list, is also marked or unmarked. The two fields can be update atomically, either together or individually. This can be done by using the most-significant-bit of next for the marking. For simplicity, we assume reading next returns the reference only, while get\_data() function is used to get (atomically) both the reference and mark bit. Moreover, whenever performing CAS on node.next, both reference and mark state should be mention.
-For ease of presentation, we assume a List is initialized with head and tail, containing keys $-\infty, \infty$ respectively. We allow no insert or delete of these keys.
+In this section, we present a recoverable version of the linked-list set algorithm of Harris \cite{DBLP:conf/wdag/Harris01}.\footnote{Some implementation details follow the algorithm's presentation by \cite{Herlihy:2008:AMP:1734069}.} Harris' algorithm maintains a linked list of nodes sorted in increasing order of keys. The \emph{next} field of each node consists of two components: a reference to the next node and a \emph{marked} bit that is set when the node is logically deleted. Both componenets can be manipulated atomically, either together or individually, using a singe-word CAS operation.\footnote{In the Java implementation of the algorithm in \cite{Herlihy:2008:AMP:1734069}, \emph{next} fields are represented by AtomicMarkableReference objects, in whose implementation the marked bit uses the least significant bit of the reference.}
+For presentation simplicity, we assume in the pseudo-code that reading the \emph{next} field returns the reference only, while invoking the get\_data() function on \emph{next} returns both the reference and the mark bit. %Moreover, whenever performing CAS on node.next, both reference and mark state should be mention.
+We also assume that the list always contain a \emph{head} and \emph{tail} sentinel nodes, containing keys $-\infty, \infty$ respectively. %We allow no insert or delete of these keys.
 
-%(a read assigned to either a single or two variables)
+We now provide a brief description of the Harris algorithm. The linked-list set supports the Find, Add and Remove set operations. Insert and Delete use the Lookup helper procedure in order to find the node with the smallest key greater than or equal to the input key (this node is denoted \emph{curr}), as well as its predecessor on the list (denoted \emph{pred}). While traversing the list, Lookup attempts to physically remove from the list any marked node it encounters. To insert a key $\alpha$, a process $p$ first calls Lookup in order to find the position in the list where $\alpha$ should be added. If $\alpha$ is already in the list, Insert returns \False, otherwise it tries to set \emph{pred}.\emph{next} to point to a new node containing $\alpha$ using CAS (which would fail if \emph{pred} has been logically deleted in the interim). To delete a key $\alpha$, $p$ searches for it using Lookup and returns \False if it not in the set. Otherwise, $p$ tries to logically delete it by marking the \emph{next} field if its node using CAS. If marking is successful, $p$  tries to physically remove the node. To find a key $\alpha$, a process simply looks for a node in the list with key $\alpha$ which is unmarked.
 
-A brief description of the original implementation and its linearization is as follows. The Lookup procedure is used by Insert and Delete in order to find the node with the lowest key greater or equal to the input key, and its predecessor on the list, while physically removing any marked node on its way. To insert a key $\alpha$, a process first finds the right location for $\alpha$ using the Lookup procedure, and then tries to set pred.next to point to a new node containing $\alpha$ by performing CAS. To delete a key $\alpha$, a process search for it using the Lookup procedure, and then tries to logically delete it by marking the next field using CAS. In case the marking was successful, the process also tries to physically remove the node. To find a key $\alpha$, a process simply looks for a node in the list with key $\alpha$ which is unmarked.
-
-The linearization point for the original implementation are as follows:
+The linearization point for the Harris algorithm are as follows:
 \begin{itemize}
-	\item [Insert:] At the point of a successful CAS
-	\item [Delete:] At the point of a successful CAS for marking the node (logical delete)
-	\item [Find:] At the point where the procedure return, that is, at the read of either curr.key or curr.next.
+	\item [Insert:] Either when Lookup finds $\alpha$ in the list, or upon a successful CAS inserting $\alpha$ to the list.
+	\item [Delete:] Upon a successful CAS that marks the node (logical deletion).
+	\item [Find:] Upon the last read of either \emph{curr}.\emph{key} or \emph{curr}.\emph{next}.
 \end{itemize}
 
 Following the given linearization points (omitting proof...), insert and delete operation are linearized at the point where they affect the system. That is, if an insert operation performed a successful CAS, then all process will see the new node starting from this point, and if a node was logically delete, then all processes treat it as if it was removed. Therefore, once a process $p$ recovers following a crash, the list data structure is consistent - if $p$ has a pending operation, either the operation already had a linearization point which affected all other processes, or it did not affect the data structure at all, nor will in any future run.
