--- a/linked-list.tex
+++ b/linked-list.tex
@@ -27,18 +27,18 @@ In this section, we present a recoverable version of the linked-list set algorit
 For presentation simplicity, we assume in the pseudo-code that reading the \emph{next} field returns the reference only, while invoking the get\_data() function on \emph{next} returns both the reference and the mark bit. %Moreover, whenever performing CAS on node.next, both reference and mark state should be mention.
 We also assume that the list always contain a \emph{head} and \emph{tail} sentinel nodes, containing keys $-\infty, \infty$ respectively. %We allow no insert or delete of these keys.
 
-We now provide a brief description of the Harris algorithm. The linked-list set supports the Find, Add and Remove set operations. Insert and Delete use the Lookup helper procedure in order to find the node with the smallest key greater than or equal to the input key (this node is denoted \emph{curr}), as well as its predecessor on the list (denoted \emph{pred}). While traversing the list, Lookup attempts to physically remove from the list any marked node it encounters. To insert a key $\alpha$, a process $p$ first calls Lookup in order to find the position in the list where $\alpha$ should be added. If $\alpha$ is already in the list, Insert returns \False, otherwise it tries to set \emph{pred}.\emph{next} to point to a new node containing $\alpha$ using CAS (which would fail if \emph{pred} has been logically deleted in the interim). To delete a key $\alpha$, $p$ searches for it using Lookup and returns \False if it not in the set. Otherwise, $p$ tries to logically delete it by marking the \emph{next} field if its node using CAS. If marking is successful, $p$  tries to physically remove the node. To find a key $\alpha$, a process simply looks for a node in the list with key $\alpha$ which is unmarked.
+We now provide a brief description of the Harris algorithm. The linked-list set supports the \find, \insertlst\ and \delete\ set operations. \insertlst\ and \delete\ use the \search\ helper procedure in order to find the node with the smallest key greater than or equal to the input key (this node is denoted \emph{curr}), as well as its predecessor on the list (denoted \emph{pred}). While traversing the list, \search\ attempts to physically remove from the list any marked node it encounters. To insert a key $\alpha$, a process $p$ first calls \search\ in order to find the position in the list where $\alpha$ should be added. If $\alpha$ is already in the list, \insertlst\ returns false, otherwise it tries to set \emph{pred}.\emph{next} to point to a new node containing $\alpha$ using CAS (which would fail if \emph{pred} has been logically deleted in the interim). To delete a key $\alpha$, $p$ searches for it using \search\ and returns false if it not in the set. Otherwise, $p$ tries to logically delete it by marking the \emph{next} field if its node using CAS. If marking is successful, $p$  tries to physically remove the node. To find a key $\alpha$, a process simply looks for a node in the list with key $\alpha$ which is unmarked.
 
 The linearization point for the Harris algorithm are as follows:
 \begin{itemize}
-	\item [Insert:] Either when Lookup finds $\alpha$ in the list, or upon a successful CAS inserting $\alpha$ to the list.
-	\item [Delete:] Upon a successful CAS that marks the node (logical deletion).
-	\item [Find:] Upon the last read of either \emph{curr}.\emph{key} or \emph{curr}.\emph{next}.
+	\item [\insertlst:] Either when Lookup finds $\alpha$ in the list, or upon a successful CAS inserting $\alpha$ to the list.
+	\item [\delete:] Upon a successful CAS that marks the node (logical deletion).
+	\item [\find:] Upon the last read of either \emph{curr}.\emph{key} or \emph{curr}.\emph{next}.
 \end{itemize}
 
-Following the given linearization points (omitting proof...), insert and delete operation are linearized at the point where they affect the system. That is, if an insert operation performed a successful CAS, then all process will see the new node starting from this point, and if a node was logically delete, then all processes treat it as if it was removed. Therefore, once a process $p$ recovers following a crash, the list data structure is consistent - if $p$ has a pending operation, either the operation already had a linearization point which affected all other processes, or it did not affect the data structure at all, nor will in any future run.
+Following the given linearization points (omitting proof...), \insertlst\ and \delete\ operation are linearized at the point where they affect the system. That is, if an \insertlst\ operation performed a successful CAS, then all processes will see the new node starting from this point, and if a node was logically delete, then all processes treat it as if it was removed. Therefore, once a process $p$ recovers following a crash, the list data structure is consistent - if $p$ has a pending operation, either the operation already had a linearization point which affected all other processes, or it did not affect the data structure at all, nor will in any future run.
 
-However, even though the list data structure is consistent, the response of the pending operation is lost. Consider for example a scenario in which process $p$ performs $Delete(\alpha)$ and crash right after applying a successful CAS to mark a node. Upon recovery, $p$ may be able to decide $\alpha$ was removed, as the node is marked. Nevertheless, even if no other process takes steps, $p$ is not able to determine whether it is the process to successfully delete $\alpha$, or that it was done by some other process, and therefore it does not able to determine the right response. Moreover, in case the node was physically removed, $p$ is not able to determine whether $\alpha$ has been deleted at all, as it is no longer part of the list.
+However, even though the list data structure is consistent, the response of the pending operation is lost. Consider for example a scenario in which process $p$ performs $\delete(\alpha)$ and crash right after applying a successful CAS to mark a node. Upon recovery, $p$ may be able to conclude $\alpha$ was removed, as the node is marked. Nevertheless, even if no other process takes steps, $p$ is not able to determine whether it is the process to successfully delete $\alpha$, or that it was done by some other process, and therefore it does not able to determine the right response. Moreover, in case the node was physically removed, $p$ is not able to determine whether $\alpha$ has been deleted at all, as it is no longer part of the list.
 
 
 \subsubsection{Linked-List Recoverable Version}
