--- a/Definitions&Model.tex
+++ b/Definitions&Model.tex
@@ -94,3 +94,20 @@ We can now define the notion of nesting-safe recoverable linearizability.
 A finite history $H$ satisfies \emph{nesting-safe recoverable linearizability} (NRL) if it is recoverable well-formed and $N(H)$ is a linearizable history.
 An object implementation satisfies NRL if all of its finite histories satisfy NRL.
 \end{definition}
+
+
+
+\subsection{General Overview}
+Harris' Linked-List algorithm is presented in Section... The implementation uses CAS and read/write primitives only.
+Attiya et al [ref...] presented recoverable implementations for read/write registers and CAS object. As suggested by the name NRL, it allows nesting. Therefore, taking any algorithm which uses only read/write and CAS primitives, and replacing each primitive with its recoverable version yields an NRL implementation of the object (some minor changes are still needed in order to use this transformation). In particular, this is the case for the Linked-List algorithm.
+
+However, such a generic construction, by its nature, is not efficient. Optimisations can be made in order to improve the complexity. For example, a simple observation is that changes to the data structure are done using CAS operations only, while all other instructions are either to local variables or a read of shared variables. Therefore, it is enough to replace only the CAS operations with a recoverable CAS. If a crash occurs outside of a recoverable CAS, we can go back to go back to after the last CAS operation, and repeat the 
+
+
+and looking for a recoverable implementation specially designed for a specific object can result an efficient algorithm. On the other hand, looking for an such an implementation for each object is itself a not trivial task.
+
+
+
+
+
+In this paper we present recoverable implementations for several objects, as Linked-List, BST, and Elimination-Stack. 
