--- a/Definitions&Model.tex
+++ b/Definitions&Model.tex
@@ -99,15 +99,12 @@ An object implementation satisfies NRL if all of its finite histories satisfy NR
 
 \subsection{General Overview}
 Harris' Linked-List algorithm is presented in Section... The implementation uses CAS and read/write primitives only.
-Attiya et al [ref...] presented recoverable implementations for read/write registers and CAS object. As suggested by the name NRL, it allows nesting. Therefore, taking any algorithm which uses only read/write and CAS primitives, and replacing each primitive with its recoverable version yields an NRL implementation of the object (some minor changes are still needed in order to use this transformation). In particular, this is the case for the Linked-List algorithm.
+Attiya et al [ref...] presented a recoverable implementations for read/write and CAS operations. As suggested by the name NRL, it allows nesting. Therefore, taking any algorithm which uses only read/write and CAS primitives, and replacing each primitive with its recoverable version yields an NRL implementation of the object (some minor changes are still needed in order to use this transformation). In particular, this is the case for the Linked-List algorithm.
 
-However, such a generic construction, by its nature, is not efficient. Optimisations can be made in order to improve the complexity. For example, a simple observation is that changes to the data structure are done using CAS operations only, while all other instructions are either to local variables or a read of shared variables. Therefore, it is enough to replace only the CAS operations with a recoverable CAS. If a crash occurs outside of a recoverable CAS, we can go back to go back to after the last CAS operation, and repeat the 
+However, such a generic construction, by its nature, is not efficient. Optimisations can be made in order to improve the complexity. For example, a simple observation is that changes to the data structure are done using CAS operations only, while all other instructions are either to local variables or a read of shared variables. Therefore, it is enough to replace only the CAS operations with its recoverable version. If a crash occurs outside of a CAS operation, upon recovery the process can go back to the last CAS operation and continue the execution from this point. 
 
+Ben-David, Blelloch and Wei [ref..] construction can be used in order to convert Harris algorithm to a recoverable one. Their approach is similar to ours - it split the code into capsules, each contains a single CAS operation, and then replacing each CAS with its recoverable version. Each capsule can be recovered in case of a crash inside the capsule. Moreover, an optimize transformation for normalized algorithms is presented. Applying this optimization to Harris algorithm results a recoverable Linked-List such that each attempt to perform an operation is encapsulate using 2 capsules only.
 
-and looking for a recoverable implementation specially designed for a specific object can result an efficient algorithm. On the other hand, looking for an such an implementation for each object is itself a not trivial task.
+In this paper we present a new recoverable implementation for Harris' Linked-List. This implementation is efficient in terms of both time and space, and avoids few of the disadvantages the above general constructions have. In particular, our implementation does not use a recoverable CAS, but rather a primitive one. Also, the content of a CAS object is the same as the original algorithm, while in Ben-David et al implementation a recoverable CAS stores also an unbounded sequence number. Under the assumption that crash is a rare event, we have tried to make the regular operations as efficient as possible, while willing to pay with a more complex recover functions. In more details, the recovery function may access the data structure and perform operations that does not change its structure, such as search.
 
-
-
-
-
-In this paper we present recoverable implementations for several objects, as Linked-List, BST, and Elimination-Stack. 
+Designing a recoverable implementation for a specific data structure, even though may result an efficient algorithm, is a non trivial and time consuming task. However, our implementation exploit a certain structure that can be found on other data structures as well, and thus our technique can be used in those cases as well. More specific, many data structures uses a CAS primitive in order to sync the operations, such that each operation is linearized at the time of a single successful CAS. In the Linked-List, for example, Insert operation is linearized at the point of adding a pointer to the new node using a successful CAS, while Delete operation is linearized at the point of a successful logical delete. The key point in recovering is that if a process crash when about to perform a CAS operation, it is not trivial to discover upon recovery whether its operation took effect. Moreover, two or more process can try and perform the same operation at the same time, for example, deleting the same node. Upon recovery, a process can not tell whether it is the process to successfully perform the operation, or that it was done by some other process, hence it does not know what value to return. Therefore, a mechanism to determine the ID of the process which performed the operation is needed, such that out of all processes attempting to perform it, exactly one is defined to successfully performed it.
