--- a/Definitions&Model.tex
+++ b/Definitions&Model.tex
@@ -98,6 +98,15 @@ An object implementation satisfies NRL if all of its finite histories satisfy NR
 
 
 \subsection{General Overview}
+Designing data structures that are also persistent in the presence of a crash-recovery is not an easy task. Several different correctness conditions and implementations have been proposed [cite...]. However, most of these implementations does not support detectability, that is, the ability to know upon recovery whether the crashed operation took effect or not.
+
+Attiya et al presented a novel crash-recovery model together with a correctness condition. Roughly speaking, Nesting-safe Recoverable Linearizability (NRL) requires each recoverable operation to supply a recover function, such that invoking it after a crash inside the operation allows the process to complete the operation, as well as restore the response value. Moreover, they presented recoverable implementations for read/write and CAS operations. As suggested by the name NRL, it allows nesting. Therefore, taking any algorithm which uses only read/write and CAS primitives, and replacing each primitive with its recoverable version yields an NRL implementation of the object (some minor changes are still needed in order to use this transformation). In particular, this is the case for all the algorithms presented in this paper. However, this transformation is very costly, in terms of both time and space.
+
+Cohen et al [cite..] presented a universal construction that implements durably any object in a lock-free manner, using at most one persistent fence per operation, which is optimal. Moreover, the algorithm uses only read, write and CAS operations. However, universal construction by its nature is not efficient. In particular, their implementation requires to keep the entire history of the object in a designated queue, as well as per-process persistent log, such that these logs as whole keeps the entire history, and different logs may have a big overlap. In addition, the response of an operation is determine by looking at the entire history up to the linearization point of the operation. Clearly, although the construction has an optimal fence complexity, in practice it is not efficient.
+
+Different concurrent implementation for specific data-structures are known. These implementations exploit the structure and requirements of the specific object in order to optimise the resulting implementation. Since a lot of work and effort has been made in developing these implementations, as well as proving their correctness, we would like to have a general approach to turn a given implementation to a recoverable one, while preserving its structure and complexity as much as possible. This way, we can enjoy both an efficient algorithm, as well as recoverability, while avoiding the need to design new algorithms.
+
+
 Harris' Linked-List algorithm is presented in Section... The implementation uses CAS and read/write primitives only.
 Attiya et al [ref...] presented a recoverable implementations for read/write and CAS operations. As suggested by the name NRL, it allows nesting. Therefore, taking any algorithm which uses only read/write and CAS primitives, and replacing each primitive with its recoverable version yields an NRL implementation of the object (some minor changes are still needed in order to use this transformation). In particular, this is the case for the Linked-List algorithm.
 
