--- a/Definitions&Model.tex
+++ b/Definitions&Model.tex
@@ -98,21 +98,27 @@ An object implementation satisfies NRL if all of its finite histories satisfy NR
 
 
 \subsection{General Overview}
-Designing data structures that are also persistent in the presence of a crash-recovery is not an easy task. Several different correctness conditions and implementations have been proposed [cite...]. However, most of these implementations does not support detectability, that is, the ability to know upon recovery whether the crashed operation took effect or not.
+Designing data structures that are also persistent in the presence of a crash-recovery is not an easy task. Several different correctness conditions and implementations have been proposed [cite...]. However, most of these conditions and implementations does not support detectability, that is, the ability to conclude upon recovery whether the crashed operation took effect or not.
 
-Attiya et al presented a novel crash-recovery model together with a correctness condition. Roughly speaking, Nesting-safe Recoverable Linearizability (NRL) requires each recoverable operation to supply a recover function, such that invoking it after a crash inside the operation allows the process to complete the operation, as well as restore the response value. Moreover, they presented recoverable implementations for read/write and CAS operations. As suggested by the name NRL, it allows nesting. Therefore, taking any algorithm which uses only read/write and CAS primitives, and replacing each primitive with its recoverable version yields an NRL implementation of the object (some minor changes are still needed in order to use this transformation). In particular, this is the case for all the algorithms presented in this paper. However, this transformation is very costly, in terms of both time and space.
+Attiya et al [cite] presented a novel crash-recovery model together with a correctness condition. Roughly speaking, Nesting-safe Recoverable Linearizability (NRL) requires each recoverable operation to supply a recover function, such that invoking it after a crash inside the operation allows the process to complete the operation, as well as restore the response value if needed. Moreover, they presented recoverable implementations for read,write and CAS operations. As suggested by the name NRL, it allows nesting. Therefore, taking any algorithm which uses only read,write and CAS primitives, and replacing each primitive with its recoverable version yields an NRL implementation (some minor changes are still needed in order to use this transformation). In particular, this is the case for all the algorithms presented in this paper. However, this transformation is very costly, in terms of both time and space.
 
-Cohen et al [cite..] presented a universal construction that implements durably any object in a lock-free manner, using at most one persistent fence per operation, which is optimal. Moreover, the algorithm uses only read, write and CAS operations. However, universal construction by its nature is not efficient. In particular, their implementation requires to keep the entire history of the object in a designated queue, as well as per-process persistent log, such that these logs as whole keeps the entire history, and different logs may have a big overlap. In addition, the response of an operation is determine by looking at the entire history up to the linearization point of the operation. Clearly, although the construction has an optimal fence complexity, in practice it is not efficient.
+Cohen et al [cite..] presented a universal construction that implements durably any object in a lock-free manner, using at most one persistent fence per operation, which is optimal. Moreover, the algorithm uses only read, write and CAS operations. However, universal construction by its nature is not efficient. In particular, their implementation requires to keep the entire history of the object in a designated shared queue, as well as per-process persistent log, such that these logs as whole keeps the entire history, and different logs may have a big overlap. In addition, the response of an operation is determine by looking at the entire history up to the linearization point of the operation. Their universal construction can be made detectable in the following way: upon recovery from a crash inside an $Update(op)$ operation, and after the system completes its recovery routine, $op$ was linearized if and only if $op$ appears in the shared queue (assuming all $op$s are unique). In such case, the process can conclude the response value, since the queue represents object's history.
 
-Different concurrent implementation for specific data-structures are known. These implementations exploit the structure and requirements of the specific object in order to optimise the resulting implementation. Since a lot of work and effort has been made in developing these implementations, as well as proving their correctness, we would like to have a general approach to turn a given implementation to a recoverable one, while preserving its structure and complexity as much as possible. This way, we can enjoy both an efficient algorithm, as well as recoverability, while avoiding the need to design new algorithms.
+Clearly, although the construction has an optimal fence complexity, in practice it is not efficient. Moreover, the crash model they consider is a system-wide crash, in which all processes crash at once. In such case, upon recovery, a single recover function is being executed by the system in order to reconstruct the queue data-structure in a consistent way. The correctness condition they consider is durable linearizability [cite], which requires that after a full system crash, the state of the object must reﬂect a consistent operation sub-history that includes all operations completed by the time of the crash. Therefore, some of the crashed operation may get lost.
+
+Different concurrent implementation for specific data-structures are known. These implementations exploit the structure and requirements of the specific object in order to optimize the resulting implementation. A lot of work and effort has been done in order to develop these implementations, as well as proving their correctness, thus we would like to have a general approach to turn a given implementation to a recoverable one, while preserving its structure and complexity as much as possible. This way, we can enjoy both an efficient algorithm, as well as recoverability, while avoiding the need to design new algorithms.
+
+Ben-David, Blelloch and Wei [ref] presented a transformation for implementations which uses only read, write and CAS operation. Their transformation results a recoverable and detectable implementation. The approach for the transformation is similar to the one mentioned in [our paper ref] - it split the code into capsules, each contains a single CAS operation followed by reads, and then replacing each CAS with its recoverable version. Each capsule can be recovered in case of a crash inside the capsule. In addition, the paper presents an optimize transformation for normalized algorithms, such that only two capsules are required for any operation. However, not all implementation we consider are given in a normalized form, and the process of converting an implementation into a normalized form may be costly by itself.
+
+Since Ben-David at el transformation is general, it may be improved in certain cases. In more details, each CAS is replaced with a recoverable CAS. This require each CAS operation to use different argument (implemented using a ever increasing sequence number), which will be stored in the CAS location. This in turn implies that the CAS uses unbounded words, even if the original implementation uses a bounded CAS (for example, the operations are over a finite domain). Furthermore, altohugh two capsules are used for each normalized operation, these two capsules are executed repeatedly, in each attempt of performing the operation (the implementation is lock-free, hence a process can fail to complete its operation over and over). In many cases, we can avoid it, and not paying the extra complexity of the capsules for a failed attempt.
+In addition, we would like the transformation to change as little as necessary from the original code, even in the price of having a more costly recover function. Assuming crash is a rare event, this may result a more efficient implementation in practice.
 
 
-Harris' Linked-List algorithm is presented in Section... The implementation uses CAS and read/write primitives only.
-Attiya et al [ref...] presented a recoverable implementations for read/write and CAS operations. As suggested by the name NRL, it allows nesting. Therefore, taking any algorithm which uses only read/write and CAS primitives, and replacing each primitive with its recoverable version yields an NRL implementation of the object (some minor changes are still needed in order to use this transformation). In particular, this is the case for the Linked-List algorithm.
 
-However, such a generic construction, by its nature, is not efficient. Optimisations can be made in order to improve the complexity. For example, a simple observation is that changes to the data structure are done using CAS operations only, while all other instructions are either to local variables or a read of shared variables. Therefore, it is enough to replace only the CAS operations with its recoverable version. If a crash occurs outside of a CAS operation, upon recovery the process can go back to the last CAS operation and continue the execution from this point. 
 
-Ben-David, Blelloch and Wei [ref..] construction can be used in order to convert Harris algorithm to a recoverable one. Their approach is similar to ours - it split the code into capsules, each contains a single CAS operation, and then replacing each CAS with its recoverable version. Each capsule can be recovered in case of a crash inside the capsule. Moreover, an optimize transformation for normalized algorithms is presented. Applying this optimization to Harris algorithm results a recoverable Linked-List such that each attempt to perform an operation is encapsulate using 2 capsules only.
+
+
+
 
 In this paper we present a new recoverable implementation for Harris' Linked-List. This implementation is efficient in terms of both time and space, and avoids few of the disadvantages the above general constructions have. In particular, our implementation does not use a recoverable CAS, but rather a primitive one. Also, the content of a CAS object is the same as the original algorithm, while in Ben-David et al implementation a recoverable CAS stores also an unbounded sequence number. Under the assumption that crash is a rare event, we have tried to make the regular operations as efficient as possible, while willing to pay with a more complex recover functions. In more details, the recovery function may access the data structure and perform operations that does not change its structure, such as search.
 
